# DiligentCore

./: .gitmodules  BuildUtils.cmake  CMakeLists.txt
Common/interface/: DefaultRawMemoryAllocator.h  FixedBlockMemoryAllocator.h  HashUtils.h  STDAllocator.h
Common/src/: DefaultRawMemoryAllocator.cpp  FixedBlockMemoryAllocator.cpp
Graphics/GLSLTools/include/: SPIRVShaderResources.h  SPIRVUtils.h
Graphics/GLSLTools/src/: GLSLSourceBuilder.cpp  SPIRVShaderResources.cpp  SPIRVUtils.cpp
Graphics/GraphicsAccessories/: CMakeLists.txt
Graphics/GraphicsAccessories/interface/: GraphicsAccessories.h  ResourceReleaseQueue.h  RingBuffer.h  VariableSizeAllocationsManager.h  VariableSizeGPUAllocationsManager.h
Graphics/GraphicsAccessories/src/: GraphicsAccessories.cpp
Graphics/GraphicsEngine/: CMakeLists.txt
Graphics/GraphicsEngine/include/: BufferBase.h  DeviceContextBase.h  PipelineStateBase.h  RenderDeviceBase.h  ResourceMappingImpl.h  ShaderBase.h  StateObjectsRegistry.h  TextureBase.h
Graphics/GraphicsEngine/interface/: DeviceContext.h  InputLayout.h  MapHelper.h
Graphics/GraphicsEngine/src/: ResourceMapping.cpp  Texture.cpp
Graphics/GraphicsEngineD3D11/: CMakeLists.txt
Graphics/GraphicsEngineD3D11/include/: D3D11TypeConversions.h  DeviceContextD3D11Impl.h  FenceD3D11Impl.h  ShaderD3D11Impl.h  ShaderResourceCacheD3D11.h  ShaderResourceLayoutD3D11.h  ShaderResourcesD3D11.h  TextureBaseD3D11.h  nvapi.h  pch.h
Graphics/GraphicsTools/: CMakeLists.txt
Primitives/: CMakeLists.txt
Primitives/interface/: MemoryAllocator.h
Primitives/interface/stl/: algorithm.h  array.h  deque.h  functional.h  list.h  map.h  set.h  unique_ptr.h  unordered_map.h  unordered_set.h  utility.h  vector.h
(+153 files in other folders)
